# aif

./: Cargo.toml
src/: fuzzer.rs  main.rs
src/inference/src/: lib.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/tui/: Cargo.toml
