workspace = { members = ["src/inference", "src/server"] }
[package]
name = "aif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.3"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
